fix: spacing in section and card-group

--- a/css/styles.css
+++ b/css/styles.css
@@ -208,7 +208,7 @@ nav a:hover::after {
 
 /* General Section Styling */
 .section {
-  padding: 20px 10px;
+  padding: 85px 10px;
   position: relative;
 }
 
@@ -227,6 +227,7 @@ nav a:hover::after {
   gap: 30px;
   max-width: 1200px;
   margin: 0 auto;
+  margin-bottom: 30px;
 }
 
 .card {
